# invoice-generator

./: Cargo.toml  README.md  index.html  tailwind.config.js
src/: components.rs  context.rs  home.rs  main.rs  reducer.rs
src/components/: button.rs  input.rs  product.rs  product_table.rs
