[package]
name = "invoice-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/" }
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
serde = "1.0.136"
strum_macros = "0.24.0"
strum = "0.24.0"